# bike_rent

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini
.github/workflows/: main.yml
bike/: admin.py  apps.py  models.py  tests.py
bike/migrations/: 0001_initial.py  0002_bike_rent_price.py  0003_remove_bike_bike_bike_status_48400f_idx_and_more.py
bike/v1/: filters.py  serializers.py  urls.py  views.py
common/: admin.py  helpers.py  models.py  routers.py  spectacular.py  urls.py
common/fixtures/: all_fixtures.json
core/: celery.py  excluded_paths.py  jinja.py  settings.py  urls.py
rent/: admin.py  apps.py  models.py  tests.py
rent/migrations/: 0001_initial.py  0002_remove_rent_rent_price.py  0003_alter_rent_unique_together.py  0004_stats.py
rent/services/: rent_bike.py  return_bike.py  stats.py
rent/v1/: serializers.py  urls.py  views.py
user/: admin.py  models.py  tests.py
user/migrations/: 0001_initial.py
user/services/: jwt.py
user/v1/: serializers.py  urls.py  views.py
